--- a/style.css
+++ b/style.css
@@ -51,3 +51,23 @@ h1 {
     border-radius: 5px;
 }
 /* animazione da aggiungere */
+
+
+.biglietto > .container {
+    border-radius: 0;
+    padding: 10px;
+}
+table {
+    width: 100%;
+    border-spacing: 0;
+}
+thead td {
+    font-weight: bold;
+    border-top: 1px solid grey;
+}
+tbody tr:last-child td {
+    border-bottom: 1px solid grey;
+}
+table td:first-child {
+    background-color: grey;
+}
